<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".homework_4.WithoutCL">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/barsa_players" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="130dp"
            android:layout_height="170dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="220dp"
            app:srcCompat="@drawable/brasa_t_shirt" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="300dp"
            android:text="@string/text_bars_1"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="330dp"
            android:text="@string/text_bars_2"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="360dp"
            android:text="@string/text_time"
            android:textSize="16sp" />
    </FrameLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp">

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_1"
                android:layout_weight="5" />
            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_2"
                android:layout_weight="5"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="5dp"
        android:background="#7b7b7b"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="75dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/stadium_color" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="75dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/barsa_logo_small" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="75dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/barsa_tv" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="75dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/barsa_fan" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/text_icon_1"
                android:textAlignment="center"
                android:textSize="16sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/text_icon_2"
                android:textAlignment="center"
                android:textSize="16sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/text_icon_3"
                android:textAlignment="center"
                android:textSize="16sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/text_icon_4"
                android:textAlignment="center"
                android:textSize="16sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="5dp"
        android:background="#7b7b7b"/>
    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dp"
        android:text="@string/about_barsa"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textStyle="bold" />


</androidx.appcompat.widget.LinearLayoutCompat>